Update 's3hgrs1q3-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:6932234955d739a38dfaac543384f42debcf7509@sha256:3db5a39eb4599ca4d2c0f12c6de0bec40577ea2ffaf1132462afcf0c969934a1

--- a/components/s3hgrs1q3-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/s3hgrs1q3-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s3hgrs1q3-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:6932234955d739a38dfaac543384f42debcf7509@sha256:3db5a39eb4599ca4d2c0f12c6de0bec40577ea2ffaf1132462afcf0c969934a1
+          name: container-image
